tree-sitter-able/test/corpus/literals.txt
==================
literals
==================

42
-123_i8
0xff_u16
3.14
123.0
0.5
1e10
"hello"
true
'a'
nil

---

(source_file
  (expression_statement
    (integer_literal))
  (expression_statement
    (integer_literal))
  (expression_statement
    (integer_literal))
  (expression_statement
    (float_literal))
  (expression_statement
    (float_literal))
  (expression_statement
    (float_literal))
  (expression_statement
    (float_literal))
  (expression_statement
    (string_literal))
  (expression_statement
    (boolean_literal))
  (expression_statement
    (char_literal))
  (expression_statement
    (nil_literal)))
